New Boat Service tests