@@ -1,7 +1,11 @@
+import Ezebuiro.Config.AppConfig;
+import Ezebuiro.Database_Operations_Control.Implements.BoatDAO;
 import Ezebuiro.Entities.Boat;
 import Ezebuiro.Services.BoatService;
+import Ezebuiro.Utility.DatabaseInitializer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 
 import java.sql.SQLException;
 import java.util.List;
@@ -10,83 +14,101 @@ import static org.junit.jupiter.api.Assertions.*;
 
 public class BoatServiceTest {
 
-    private BoatService boatService;
-    private Boat boat1;
-    List <Boat> boats;
+    private BoatService boatService = null;
+    AnnotationConfigApplicationContext context = null;
+    DatabaseInitializer dbinit = null;
+
     @BeforeEach
     void setUp() throws SQLException {
-        boatService = new BoatService();
-        boats = boatService.getAllBoats();
+        context = new AnnotationConfigApplicationContext(AppConfig.class);
+        dbinit = context.getBean(DatabaseInitializer.class);
+        dbinit.initialize();
+        boatService = context.getBean(BoatService.class);
 
-    }
-    @Test
-    public void testAddBoat () {
-       try {
-           if (!(boats.isEmpty())) {
-               boatService.delete(boats.getLast().getId());
-           }
-       }catch(SQLException e) {
-           e.printStackTrace();
-       }
-
-       Boat boat = new Boat(0,"Tank","XPV-311",400.0,350,"ABAB1243",true);
-        boatService.create(boat);
-        boats = boatService.getAllBoats();
-
-        assertFalse(boats.isEmpty());
-        Boat sqlBoat = boats.getLast();
-
-        assertEquals(boat, sqlBoat);
     }
 
     @Test
-    public void getAllBoats() {
+    public void testAddBoat () throws SQLException {
+        int oldBoats = boatService.getAllBoats().size();
+        Boat boat = new Boat(0,"Tank","XPV-311",400.0,350,"ABAB1243",true);
+        boatService.addBoat(boat);
+        int newBoats = boatService.getAllBoats().size();
+        assertTrue(newBoats == oldBoats+1);
+    }
+
+    @Test
+    public void getAllBoats() throws SQLException {
         List<Boat> boats = boatService.getAllBoats();
+        int numberOfBoats = boats.size();
         assertNotNull(boats);
         assertFalse(boats.isEmpty());
         for(Boat boat : boats) {
             assertNotNull(boat);
         }
+        assertTrue(numberOfBoats == 10);//10 Boats//
     }
 
-    @Test//Test ran after delete test
+    @Test
     public void getBoatById() throws SQLException {
-        boats = boatService.getAllBoats();
-        Boat lastBoat = boats.getLast();
-        assertEquals(lastBoat,boatService.getBoat(lastBoat.getId()));
+        Boat boat = boatService.getBoatById(1);
+        assertNotNull(boat);
+        assertTrue(boat.getId() == 1);
+        assertTrue(boat.getBrand().equals("Bayliner"));
 
     }
 
     @Test
     public void getBoatbyBrand() throws SQLException {
-        List<Boat> boats = boatService.getBoatsByBrand("Tank");
-        Boat Tank = boats.getLast();
+        List<Boat> boats = boatService.getBoatsByBrand("Yamaha");
+        Boat Yamaha = boats.getLast();
+        assertNotNull(Yamaha);
+        assertTrue(boats.contains(Yamaha));
 
-        assertTrue(boats.contains(Tank));
-        assertEquals(boats.getLast(),Tank);
     }
 
     @Test
     public void UpdateBoatAvailability() throws SQLException {
-        boat1 = boatService.getBoatsByBrand("Tank").get(0);
+        Boat boat1 = boatService.getAllBoats().getFirst();
+        boolean initial_state = boat1.isAvailable();
+
         if(boat1.isAvailable()){
-            boatService.Availability(boatService.getBoat(boat1.getId()),false);
-            boat1 = boatService.getBoat(boat1.getId());
-            assertFalse(boat1.isAvailable());
-        }else{
-            boatService.Availability(boatService.getBoat(boat1.getId()),true);
-            boat1 = boatService.getBoat(boat1.getId());
-            assertTrue(boat1.isAvailable());
+            boatService.UpdateBoat(boat1,false);
+            boat1 = boatService.getAllBoats().getFirst();
+            boolean update = boat1.isAvailable();
+            assertFalse(initial_state==update);
+        }
+        else{
+            boatService.UpdateBoat(boat1,true);
+            boat1 = boatService.getAllBoats().getFirst();
+            boolean update = boat1.isAvailable();
+            assertFalse(initial_state==update);
         }
 
     }
 
     @Test
     public void Advanced_search() throws SQLException {
-        boat1 = boatService.getBoatsByBrand("Tank").get(0);
-       List<Boat> boatSearch = boatService.Advancedsearch(300,500,400.0,"Tank","XPV-311");
-        assertEquals(boat1,boatSearch.get(0));
+        List<Boat> boatSearch = boatService.Advancedsearch(6,10 ,400.0,"Yamaha","SX210");
+        boolean result = boatSearch.size() >= 1;
+        if(result){
+            System.out.println("The filter returned the following boats:");
+            for(Boat boat : boatSearch){
+                System.out.println(boat);
+            }
+        }else{
+            System.out.println("The filter did not return anything:");
+        }
     }
 
 
+     @Test
+    public void testDeleteBoat () throws SQLException {
+         Boat boat = new Boat(0,"Tank","XPV-311",400.0,350,"ABAB1243",true);
+         boatService.addBoat(boat); //In order to prevent foreign key violations//
+         int initialsize= boatService.getAllBoats().size(); //10+1//
+         boatService.delete(11);
+         int afterdelete = boatService.getAllBoats().size(); //10//
+         assertTrue(afterdelete==initialsize-1); //1 boat deleted//
+
+     }
 }
